* Fixed Issue 474: CellStyle1 is not there in reportlab 2.6
* Removed default padding from DelayedTable, which looked bad
  on headers/footers.
* Improvements to the math directive (font color and size)
* Better support for styling literals.
* Fixed Issue 454 (Splitting failure)
* Regressed Issue 374 (some literal blocks get oversplit)

New in 0.92
-----------

* Fixed Issue 394; missing _restrictSize method with RL 2.5
* Fixed Issue 452: applying missing classes to lists crashed rst2pdf
* Fixed Issue 427: multiple spaces collapsed on inline literals.
* Fixed Issue 451: roman.py was moved in docutils 0.9
* Fixed Issue 446: made it work again with python 2.4

New in 0.91
-----------

* Fixed Issue 438: sphinx support was completely broken in 0.90

New in 0.90
-----------

* Added raw HTML support, by Dimitri Christodoulou
* Fixed Issue 422: Having no .afm files made font lookup slow.
* Fixed Issue 411: Sometimes the windows registry has the font's abspath.
* Fixed Issue 430: Using --config option caused other options to 
  be ignored (by charles at cstanhope dot com)
* Fixed Issue 436: Add pdf_style_path to sphinx (by tyler@datastax.com)
* Fixed Issue 428: page numbers logged as errors
* Added support for many pygments options in code-block (by Joaquin Sorianello)
* Implemented Issue 404: plantuml support
* Issue 399: support sphinx's template path option
* Fixed Issue 406: calls to the wrong logging function
* Implemented Issue 391: New --section-header-depth option.
* Fixed Issue 390: the --config option was ignored.
* Added support for many pygments options in code-block (by Joaquin Sorianello)
* Fixed Issue 379: Wrong style applied to paragraphs in definitions.
* Fixed Issue 378: Multiline :address: were shown collapsed.
* Implemented Issue 11: FrameBreak (and conditional FrameBreak)
* The description of frames in page templates was just wrong.
* Fixed Issue 374: in some cases, literal blocks were split inside
  a page, or the pagebreak came too early.