@@ -54,7 +54,7 @@ hyphenation_require = ['wordaxe>=1.0']
 images_require = ['PIL']
 pdfimages_require = ['pyPdf','PythonMagick']
 pdfimages2_require = ['pyPdf','SWFTools']
-svgsupport_require = ['svglib']
+svgsupport_require = ['svg2rlg']
 sk1support_require = ['uniconvertor']
 aafiguresupport_require = ['aafigure>=0.4']
 mathsupport_require = ['matplotlib']
